Merged Toms git files into this one, successfully functioning with no errors.
refined classes

Merged views and fixed some